--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "portflio-website",
+  "homepage": "https://SHANTANUKUMAR3688.github.io/Portfolio-Website-1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,18 +8,22 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.5",
     "framer-motion": "^11.15.0",
+    "gh-pages": "^6.3.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-type-animation": "^3.2.0",
     "three": "^0.171.0"
